--- a/Site-4/index.html
+++ b/Site-4/index.html
@@ -28,7 +28,7 @@
                         <li ><a class="login"  href="login.html">LOGIN</a></li>
                         <li ><a class="cadastro" href="cadastro.html">CADASTRO</a></li>
                     </ul>
-                    <div >
+                    <div>
                         <a  href=""><img class="redes-sociais" src="./img/facebook.png" alt=""></a>
                         <a  href=""><img class="redes-sociais" src="./img/005-instagram.png" alt=""></a>
                         <a  href=""><img class="redes-sociais" src="./img/003-twitter.png" alt=""></a>
@@ -51,14 +51,17 @@
         </nav>
     </header>
 
-    <section class="carousel">
-        <div class="content">
-            <img src="./img/Manhã.png" alt="manhã">
-            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptate quae rem consequuntur quia non porro dolore assumenda blanditiis eum harum voluptatum aliquam, cupiditate accusamus quaerat earum quisquam fuga tenetur.
-                Lorem ipsum
+    <main>
+        <section class="carousel">
+            <div class="content">
+                <img src="./img/Manhã.png" alt="manhã">
+                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptate quae rem consequuntur quia non porro dolore assumenda blanditiis eum harum voluptatum aliquam, cupiditate accusamus quaerat earum quisquam fuga tenetur.
+                    Lorem ipsum
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
+    
 
     <main class="main">
         <div class="content">
