--- a/Site-2/index.html
+++ b/Site-2/index.html
@@ -31,7 +31,8 @@
             </div>
         </nav>
     </header>
-    <main class="conteúdo">
+    
+    <main class="cont">
         <section class="container-1">
             <div class="content-1">
                 <div class="manha">
