--- a/Área de testes/jquery/index.html
+++ b/Área de testes/jquery/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="styles/estilo.css">
-    
+    <link rel="stylesheet" href="styles/animation.css">
 </head>
 <body>
     <input type="button" id="animar" value="Animar">
@@ -29,7 +29,11 @@
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio nobis doloribus quod recusandae, asperiores voluptatibus neque ea provident et sunt magnam officiis eveniet. Reprehenderit fugit officia suscipit! Nesciunt, magni minus.
             </div>
         </div>
-        
+        <div class="btn">
+            <div class="one"></div>
+            <div class="two"></div>
+            <div class="three"></div>
+        </div>
     </section>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
